# Kaggle

Kaggle MedGemma Impact Challenge/: README.md  pyproject.toml  requirements.txt  setup.cfg
Kaggle MedGemma Impact Challenge/configs/: qlora.yaml
Kaggle MedGemma Impact Challenge/docs/: ARCHITECTURE.md  CLINICAL_VALIDATION.md  DEPLOYMENT.md
Kaggle MedGemma Impact Challenge/scripts/: generate_report.py  run_pipeline.py
Kaggle MedGemma Impact Challenge/src/agents/: __init__.py  challenger.py
Kaggle MedGemma Impact Challenge/src/pipeline/: sentinel.py
Kaggle MedGemma Impact Challenge/src/utils/: data_loader.py  metrics.py
Kaggle MedGemma Impact Challenge/src/visualization/: __init__.py
Kaggle MedGemma Impact Challenge/tests/: test_agents.py  test_metrics.py
MedGemma Impact Challenge/: CONTRIBUTING.md  LICENSE
MedGemma Impact Challenge/configs/: default.yaml
MedGemma Impact Challenge/demo/: medgemma_sovereign_video.html
MedGemma Impact Challenge/src/: __init__.py
MedGemma Impact Challenge/src/agents/: diagnostician.py  factchecker.py
MedGemma Impact Challenge/src/pipeline/: __init__.py  hitl_gate.py  txgemma_pharma.py
MedGemma Impact Challenge/src/utils/: __init__.py  clinical_vocab.py  model_loader.py
MedGemma Impact Challenge/src/visualization/: figures.py
MedGemma Impact Challenge/tests/: __init__.py  test_pipeline.py
Obesity ML Competition/Crunch 1/: LICENSE  Method Description.md  README.md  main.ipynb  main.py  requirements.txt
